@@ -1,3 +1,8 @@
+2014-01-11  JJ Allaire <jj@rstudio.org>
+
+        * R/Attributes.R: initial support for Rcpp::plugins attribute
+        * src/attributes.cpp: initial support for Rcpp::plugins attribute
+
 2014-01-04  JJ Allaire <jj@rstudio.org>
 
         * R/Attributes.R: null check on pkginfo depends field
